unpackaged/main/default/objects/Surgeon_in_Hospital__c/Surgeon_in_Hospital__c.object-meta.xml
<CustomObject>
    <label>Surgeon in Hospital</label>
    <nameField>
        <displayFormat>SH {0000}</displayFormat>
        <label>Surgeon in Hospital Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgeons in Hospital</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>