unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Address_Update__c.field-meta.xml
<CustomField>
    <fullName>Address_Update__c</fullName>
    <inlineHelpText>Updates when a change is made to the &#39;Hopsital&#39; name or &#39;email on record&#39; fields.</inlineHelpText>
    <label>Last update from Acct/Hospital</label>
    <type>DateTime</type>
</CustomField>