unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Contracted_Price_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Price_Agreement__c</fullName>
    <formula>TEXT ( Hospital__r.Contract_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Price Agreement</label>
    <type>Text</type>
</CustomField>