unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgeons in Hospital (Distributor)</relationshipLabel>
    <relationshipName>Surgeons_in_Hospital2</relationshipName>
    <type>Lookup</type>
</CustomField>