unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Distributor_ID__c.field-meta.xml
<CustomField>
    <fullName>Distributor_ID__c</fullName>
    <formula>Hospital__r.Distributor__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor ID</label>
    <type>Text</type>
</CustomField>