unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/First_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Copy__c</fullName>
    <label>First Name Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>