unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hospital</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgeons</relationshipLabel>
    <relationshipName>Surgeons_in_Hospital1</relationshipName>
    <type>Lookup</type>
</CustomField>