unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_City1__c.field-meta.xml
<CustomField>
    <fullName>Hospital_City1__c</fullName>
    <description>Previous Hospital City field did not point to the correct field</description>
    <formula>Hospital__r.Customer_Address_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital City1</label>
    <type>Text</type>
</CustomField>