unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_City1_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hospital_City1_Copy__c</fullName>
    <description>Used to detect formula changes</description>
    <label>Hospital City1 Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>