unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Country__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Country__c</fullName>
    <formula>TEXT(Hospital__r.Customer_Address_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Country</label>
    <type>Text</type>
</CustomField>