unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Country_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Country_Copy__c</fullName>
    <description>Used to detect changes to the formula</description>
    <label>Hospital Country Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>