unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Email__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Email__c</fullName>
    <formula>Hospital__r.Email_Address_For_Order_Form__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Email</label>
    <type>Text</type>
</CustomField>