unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Email_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Email_Copy__c</fullName>
    <description>Used to detect changes in the related formula</description>
    <label>Hospital Email Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>