unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Key_Account_del__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Key_Account_del__c</fullName>
    <formula>00NU0000003fuv8.00NU0000005Rr2F</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>