unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <formula>Hospital__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Name</label>
    <type>Text</type>
</CustomField>