unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name_Copy__c</fullName>
    <description>Used to check for changes in formula values</description>
    <label>Hospital Name Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>