unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_State1__c.field-meta.xml
<CustomField>
    <fullName>Hospital_State1__c</fullName>
    <formula>TEXT(Hospital__r.Customer_Address_County__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital State1</label>
    <type>Text</type>
</CustomField>