unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_State1_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hospital_State1_Copy__c</fullName>
    <description>Used to detect changes in formulas</description>
    <label>Hospital State1 Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>