unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_State__c.field-meta.xml
<CustomField>
    <fullName>Hospital_State__c</fullName>
    <formula>Hospital__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>