unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Street__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Street__c</fullName>
    <formula>Hospital__r.Customer_Address_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Street</label>
    <type>Text</type>
</CustomField>