unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Street_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Street_Copy__c</fullName>
    <description>Used to detect changes to the formula value</description>
    <label>Hospital Street Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>