unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Zip_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Zip_Postcode__c</fullName>
    <formula>Hospital__r.Customer_Address_Postcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Zip/Postcode</label>
    <type>Text</type>
</CustomField>