unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Hospital_Zip_Postcode_Copy__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Zip_Postcode_Copy__c</fullName>
    <description>Used to detect changes in the formula</description>
    <label>Hospital Zip/Postcode Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>