unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <formula>Text(Surgeon__r.Job_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Role</label>
    <type>Text</type>
</CustomField>