unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>Surgeon__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>