unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Last_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Copy__c</fullName>
    <description>Used to detect changes in the related formula</description>
    <label>Last Name Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>