unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Number_1__c.field-meta.xml
<CustomField>
    <fullName>Number_1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>