unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <formula>TEXT(Surgeon__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>