unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Salutation_Copy__c.field-meta.xml
<CustomField>
    <fullName>Salutation_Copy__c</fullName>
    <description>Used to detect changes to the related formula</description>
    <label>Salutation Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>