unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/STIMULAN_User__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_User__c</fullName>
    <formula>Surgeon__r.STIMULAN_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STIMULAN User</label>
    <type>Checkbox</type>
</CustomField>