unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Suregeon_person_account__c.field-meta.xml
<CustomField>
    <fullName>Suregeon_person_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suregeon (person account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgeons in Hospital (Suregeon (person account))</relationshipLabel>
    <relationshipName>Surgeons_in_Hospital</relationshipName>
    <type>Lookup</type>
</CustomField>