unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hospitals</relationshipLabel>
    <relationshipName>Surgeons_in_Hospital</relationshipName>
    <type>Lookup</type>
</CustomField>