unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Surgeon_Email__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Email__c</fullName>
    <formula>Surgeon__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surgeon Email</label>
    <type>Text</type>
</CustomField>