unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Surgeon_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Job_Title__c</fullName>
    <formula>Surgeon__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surgeon Job Title</label>
    <type>Text</type>
</CustomField>