unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Surgeon_Name_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Name_TEMP__c</fullName>
    <description>DO NOT DEPLOY</description>
    <formula>Surgeon__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surgeon Name TEMP</label>
    <type>Text</type>
</CustomField>