unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Surgeon_NPI__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_NPI__c</fullName>
    <formula>Surgeon__r.Account.NPI_GMC_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surgeon NPI</label>
    <type>Text</type>
</CustomField>