unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Surgeon_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Specialty__c</fullName>
    <formula>TEXT(Surgeon__r.Specialty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surgeon Specialty</label>
    <type>Text</type>
</CustomField>