unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/This_blank_record_is_used_for_app_sharin__c.field-meta.xml
<CustomField>
    <fullName>This_blank_record_is_used_for_app_sharin__c</fullName>
    <formula>IF( ISBLANK( Surgeon__c ) , TRUE, false)</formula>
    <inlineHelpText>This indicates if this record is used for the hub app sharing. 
When the surgeon is blank it allows the hub app users to see the hospital records</inlineHelpText>
    <label>This record is used for hub app sharing</label>
    <type>Checkbox</type>
</CustomField>