unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/this_is_a_blank_record__c.field-meta.xml
<CustomField>
    <fullName>this_is_a_blank_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>this is a blank record</label>
    <type>Checkbox</type>
</CustomField>