unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Thur__c.field-meta.xml
<CustomField>
    <fullName>Thur__c</fullName>
    <label>Thur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>