unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/Tue__c.field-meta.xml
<CustomField>
    <fullName>Tue__c</fullName>
    <label>Tue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>