unpackaged/main/default/objects/Surgeon_in_Hospital__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>Surgeon__r.User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Checkbox</type>
</CustomField>