unpackaged/main/default/objects/Surgeon_in_Hospital__c/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>true</active>
    <label>Distributor</label>
</RecordType>