unpackaged/main/default/objects/Surgeon_in_Hospital__c/recordTypes/Hospital.recordType-meta.xml
<RecordType>
    <fullName>Hospital</fullName>
    <active>true</active>
    <label>Hospital</label>
</RecordType>