unpackaged/main/default/objects/Surgeon_in_Hospital__c/recordTypes/Surgeon_in_Hospital.recordType-meta.xml
<RecordType>
    <fullName>Surgeon_in_Hospital</fullName>
    <active>true</active>
    <label>Surgeon in Hospital</label>
</RecordType>