unpackaged/main/default/objects/Surgeon_in_Hospital__c/recordTypes/To_Be_Reviewed.recordType-meta.xml
<RecordType>
    <fullName>To_Be_Reviewed</fullName>
    <active>true</active>
    <label>To Be Reviewed</label>
</RecordType>