unpackaged/main/default/objects/Surgeon_in_Hospital__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Hospital_Name__c</columns>
    <columns>Surgeon__c</columns>
    <columns>NAME</columns>
    <columns>Distributor__c</columns>
    <columns>This_blank_record_is_used_for_app_sharin__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>